--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Concept_List</string>
+    <color name="blue">#e6f3ff</color>
+    <color name="dark_blue">#0060b9</color>
+    <color name="white">#ffffff</color>
+    <color name="dark_grey">#FF636363</color>
 </resources>
